# arcade

./: .gitignore  CMakeLists.txt  Makefile  README.md  api-doc.cfg  sources.mk
doc/: AGame_8hpp_source.html  Color_8hpp_source.html  Date_8hpp_source.html  Dimensions_8hpp_source.html  Exceptions_8hpp_source.html  IContext_8hpp_source.html  IEvents_8hpp_source.html  IGraphic_8hpp_source.html  Position_8hpp_source.html  Protocol_8hpp_source.html  annotated.html  classarcade_1_1api_1_1AGame-members.html  classarcade_1_1api_1_1AGame.html  classarcade_1_1api_1_1ContextException-members.html  classarcade_1_1api_1_1ContextException.html  classarcade_1_1api_1_1EventException-members.html  classarcade_1_1api_1_1EventException.html  classarcade_1_1api_1_1GameException-members.html  classarcade_1_1api_1_1GameException.html  classarcade_1_1api_1_1GraphicException-members.html  classarcade_1_1api_1_1GraphicException.html  classarcade_1_1api_1_1IContext-members.html  classarcade_1_1api_1_1IContext.html  classarcade_1_1api_1_1IEvents-members.html  classarcade_1_1api_1_1IEvents.html  classarcade_1_1api_1_1IGraphic-members.html  classarcade_1_1api_1_1IGraphic.html  classarcade_1_1utl_1_1Color-members.html  classarcade_1_1utl_1_1Color.html  classarcade_1_1utl_1_1Date-members.html  classarcade_1_1utl_1_1Date.html  classarcade_1_1utl_1_1Dimensions-members.html  classarcade_1_1utl_1_1Dimensions.html  classarcade_1_1utl_1_1Position-members.html  classarcade_1_1utl_1_1Position.html  classes.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d54b91c4f71b53b4f620ccbe60ed4e62.html  files.html  (+22 more)
doc/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  enumvalues_14.js  enumvalues_16.js  (+34 more)
games/: Makefile
games/centipede/: Makefile  sources.mk
games/centipede/include/: AEntity.hpp  Centipede.hpp  EntityFactory.hpp  GameManager.hpp  Grid.hpp  IDrawableEntity.hpp  MouliInterface.cpp  MouliInterface.hpp  Obstacle.hpp  Player.hpp
games/centipede/src/: AEntity.cpp  Centipede.cpp  GameManager.cpp  Grid.cpp  Obstacle.cpp  Player.cpp  endpoints.cpp
games/snake/: Makefile  sources.mk
games/snake/bonus/: Makefile  sources.mk
games/snake/include/: ACell.hpp  AxisCell.hpp  BoardCell.hpp  FoodCell.hpp  GameSnake.hpp  SnakeCell.hpp  SnakeException.hpp  SnakeMenu.hpp
games/snake/src/: GameSnake.cpp  SnakeCell.cpp  SnakeMenu.cpp
include/: ADrawModel.hpp  ContextNcurse.hpp  Core.hpp  Engine.hpp  Framerate.hpp  MainMenu.hpp
include/API/: AGame.hpp  Exceptions.hpp  IContext.hpp  IEvents.hpp  IGraphic.hpp  Protocol.hpp
include/exceptions/: loaderExceptions.cpp  loaderExceptions.hpp
include/loader/: DLInterface.hpp  DLLoader.hpp  DLLoaderManager.hpp
include/utils/: Color.hpp  Date.hpp  Dimensions.hpp  Position.hpp
lib/: Makefile
lib/SFML/: Makefile  sources.mk
lib/SFML/include/: SFMLContext.hpp  SFMLEvents.hpp  SFMLGraphics.hpp
lib/SFML/src/: SFMLContext.cpp  SFMLEvents.cpp  SFMLGraphics.cpp  endpoints.cpp
lib/ncurse/: Makefile  sources.mk
lib/ncurse/include/: ContextNcurse.hpp  EventsNcurse.hpp  GraphicsNcurse.hpp  (+1 more)
lib/openGL/: Makefile
ressource/: snake_scores.txt
src/: main.cpp
src/Core/: Core.cpp  Engine.cpp  Framerate.cpp  MainMenu.cpp
tests/: play.cpp
(+21 files in other folders)
